fix(notification): Prevent buttons wrap

--- a/src/content/notification.css
+++ b/src/content/notification.css
@@ -1,6 +1,6 @@
 #notification-bar-iframe {
     width: 100%;
-    max-width: 420px;
+    max-width: 430px;
     box-shadow: 0 1px 3px 0 rgba(50, 54, 63, 0.19), 0 6px 18px 0 rgba(50, 54, 63, 0.19);
     border: solid 1px rgba(50, 54, 63, 0.12);
     position: fixed;
