--- a/src/notification/bar.scss
+++ b/src/notification/bar.scss
@@ -103,6 +103,7 @@ button {
     top: 15px;
     float: right;
     border-radius: $border-radius-large;
+    display: flex;
 }
 
 .add-or-change {
